# claude-kickstart

./: .gitignore  AGENTS.md  CLAUDE.md  DEMO.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.claude/: settings.json
.claude/commands/: leave-kickstart.md
claude-kickstart/: RUNTIME.md
examples/: README.md  mental-health-professional.json  parent-household.json
src/claude_kickstart/: __init__.py  cli.py
src/claude_kickstart/assets/.claude/: settings.json
src/claude_kickstart/assets/.claude/commands/: kickstart.md
src/claude_kickstart/assets/claude-kickstart/: METHOD.md  ONBOARDING-PRO.md  ONBOARDING.md  PROGRESSION.md  RUNTIME.md  SAFETY.md  TUTORIAL.md
tests/: fixtures.test.mjs  history.test.mjs  installer.test.mjs  run-tests.sh  state.test.mjs
