[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-kickstart"
version = "0.1.0"
description = "A project-local beginner-facing harness for Claude Code"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "LPCI"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/hermes-labs-ai/claude-kickstart"
Repository = "https://github.com/hermes-labs-ai/claude-kickstart"

[project.scripts]
claude-kickstart = "claude_kickstart.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claude_kickstart = [
  "assets/.claude/commands/*.md",
  "assets/.claude/settings.json",
  "assets/claude-kickstart/*.md",
  "assets/claude-kickstart/bin/*.mjs",
  "assets/claude-kickstart/state/.gitignore",
  "assets/claude-kickstart/creations/.gitignore",
]
